# Cellophane

./: README.md  pyproject.toml
cellophane/: api.py
tests/unit/: test_api.py  test_requestsmixin.py
